gitlab/gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: gitlab.jaychang.cn
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: http
